Upgrade to Java 11
Using the openjfx sdk and jpackager provided by gluon is possible to upgrade
the application. The packaging is working, this commit creates tasks to
build and appimage with a custom runtime, just with the modules we need.