@@ -15,6 +15,7 @@ buildscript {
     }
     dependencies {
         classpath "com.github.jengelman.gradle.plugins:shadow:5.1.0"
+        classpath 'org.openjfx:javafx-plugin:0.0.7'
     }
 }
 
@@ -22,11 +23,14 @@ sourceSets {
     main.output.resourcesDir = main.java.outputDir
 }
 
-sourceCompatibility = 1.9
+version = '0.4.0'
+sourceCompatibility = 11
+targetCompatibility = 11
 ext.moduleName = 'br.com.pinter.tqrespec'
 ext.javahome = System.properties['java.home']
+ext.moduleInfoPresent = false
 ext.patchjarDir = new File(buildDir, '/patchedjar')
-apply from:"patchModulesJar.gradle"
+apply from: "patchModulesJar.gradle"
 mainClassName = "$moduleName/br.com.pinter.tqrespec.core.FxApplication"
 
 repositories {
@@ -35,6 +39,7 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
+    compile fileTree(dir: 'sdk/javafx-sdk-11/lib', include: '*.jar')
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.28.2'
     testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.2'
@@ -48,12 +53,14 @@ dependencies {
 
 jar {
     manifest {
-        attributes('Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+        attributes('Class-Path': configurations.compile.plus(configurations.runtimeClasspath.findAll {
+            it.getName().matches("javafx.*" + "win" + ".jar")
+        }).collect { it.getName() }.join(' '),
                 'Implementation-Version': project.version,
                 'Automatic-Module-Name': moduleName,
                 'Main-Class': 'br.com.pinter.tqrespec.core.FxApplication')
     }
-    from('src/main/resources/META-INF')
+//    from('src/main/resources/META-INF')
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 shadowJar {
@@ -66,40 +73,44 @@ task copyMetaInf(type: Copy) {
     into new File(sourceSets.main.java.outputDir, '/META-INF')
 }
 
-compileJava {
-    inputs.property("moduleName", moduleName)
-    doFirst {
-        options.compilerArgs = [
-                '--module-path', classpath.asPath,
-                '--patch-module', "$moduleName=" + files(sourceSets.main.resources.srcDirs).asPath,
-        ]
-        classpath = files()
+if (file('src/main/java/module-info.java').exists()) {
+    ext.moduleInfoPresent = true
+    compileJava {
+        inputs.property("moduleName", moduleName)
+        doFirst {
+            options.compilerArgs = [
+                    '--module-path', classpath.asPath,
+                    '--patch-module', "$moduleName=" + files(sourceSets.main.resources.srcDirs).asPath,
+            ]
+            classpath = files()
+        }
+    }
+
+    run {
+        inputs.property("moduleName", moduleName)
+        doFirst {
+            jvmArgs = [
+                    '--module-path', classpath.asPath,
+                    '--module', mainClassName,
+                    '--patch-module', "$moduleName=" + files(sourceSets.main.output.resourcesDir).asPath
+            ]
+            classpath = files()
+        }
     }
 }
 
-run {
-    inputs.property("moduleName", moduleName)
-    doFirst {
-        jvmArgs = [
-                '--module-path', classpath.asPath,
-                '--module', mainClassName,
-                '--patch-module', "$moduleName=" + files(sourceSets.main.output.resourcesDir).asPath
-        ]
-        classpath = files()
-    }
-}
 task copyToLib(type: Copy) {
     doFirst {
         mkdir "$buildDir/jardist"
     }
-    from configurations.compile
-    from "$buildDir/libs/tqrespec.jar"
+    from(configurations.compile.findAll { !it.getName().matches("javafx.*.jar") }).collect { it.getPath() }
+
+    from jar
     into "$buildDir/jardist"
 }
 
-jar.dependsOn(copyToLib)
+copyToLib.dependsOn(jar)
 classes.dependsOn('copyMetaInf')
-compileJava.dependsOn('patchLibs')
 
 task copyJarsToModuleDeps(type: Copy) {
     from project(':tqdatabase').configurations.compile
@@ -107,19 +118,44 @@ task copyJarsToModuleDeps(type: Copy) {
     into patchjarDir
 }
 
-
-task patchLibs(type: PatchJarModuleTask) {
-    tempPatchDir = new File(buildDir, '/temppatch')
-    delete = false
-    tempJarDir = new File(rootProject.projectDir,'libs')
-    moduleDeps = ['platform': 'jna', 'cdi.api': 'javax.inject,javax.interceptor,javax.el']
-}
-
 task patchModulesJar(type: PatchJarModuleTask) {
     dependsOn 'copyJarsToModuleDeps'
+    delete = true
     tempPatchDir = new File(buildDir, '/temppatch')
     tempJarDir = patchjarDir
     moduleDeps = ['com.sun.jna.platform': 'com.sun.jna', 'cdi.api': 'javax.inject,javax.interceptor,javax.el']
+}
+
+task copyAppimageFiles(type: Copy) {
+    dependsOn(jar)
+    doFirst {
+        mkdir "$buildDir/appimage-files"
+    }
+    if (!moduleInfoPresent) {
+        from project(':tqdatabase').tasks.jar.outputs.files.collect { it.getPath() }
+    }
+    from(configurations.compile.findAll {
+        !it.getName().matches("javafx.*.jar") && !it.getName().matches("tqdatabase.*.jar")
+    }).collect { it.getPath() }
+    from jar
+    into "$buildDir/appimage-files"
+}
+
+task copyAppimageModules(type: Copy) {
+    if (moduleInfoPresent) {
+        dependsOn(patchModulesJar)
+    }
+
+    dependsOn(jar)
+    doFirst {
+        mkdir "$buildDir/appimage-modules"
+    }
+    from project(':tqdatabase').tasks.jar.outputs.files.collect { it.getPath() }
+    if (moduleInfoPresent) {
+        from patchjarDir
+        from jar
+    }
+    into "$buildDir/appimage-modules"
 }
 
 task jlink(type: Exec) {
@@ -127,45 +163,96 @@ task jlink(type: Exec) {
     dependsOn 'jar'
     dependsOn 'tqdatabase:jar'
     dependsOn 'copyToLib'
-    dependsOn 'shadowJar'
+    dependsOn 'copyJarsToModuleDeps'
+    if (!moduleInfoPresent) {
+        dependsOn 'copyAppimageFiles'
+    }
+    dependsOn 'copyAppimageModules'
     workingDir buildDir
 
-    commandLine "${javahome}/bin/jlink.exe",
-            '--module-path', ("${File.pathSeparatorChar}libs" + "${File.pathSeparatorChar}${javahome}/jmods"),
-            '--add-modules', ("javafx.base,javafx.fxml,javafx.graphics,javafx.controls,"
-                +"java.prefs,java.base,"
-                +"jdk.zipfs,jdk.unsupported"),
-            '--output', new File(buildDir, '/dist'),
-            '--strip-debug',
-            '--compress', '2',
-            '--no-header-files',
-            '--no-man-pages'
+    if (moduleInfoPresent) {
+        commandLine "${javahome}/bin/jlink.exe",
+                '--module-path', File.pathSeparator + new File(projectDir, "sdk/javafx-sdk-11/lib").toString() + File.pathSeparator + new File(buildDir, "appimage-modules").toString(),
+                '--add-modules', ("org.apache.commons.lang3,br.com.pinter.tqdatabase,br.com.pinter.tqrespec,com.sun.jna,com.sun.jna.platform,javafx.base,javafx.fxml,javafx.graphics,javafx.controls,java.prefs,java.base,jdk.zipfs,jdk.unsupported,java.logging"),
+                '--output', new File(buildDir, '/jre-image'),
+                '--strip-debug',
+                '--compress', '2',
+                '--no-header-files',
+                '--no-man-pages'
+    } else {
+        commandLine "${javahome}/bin/jlink.exe",
+                '--module-path', File.pathSeparator + new File(projectDir, "sdk/javafx-sdk-11/lib").toString() + File.pathSeparator + new File(buildDir, "appimage-modules").toString(),
+                '--add-modules', ("javafx.base,javafx.fxml,javafx.graphics,javafx.controls,java.prefs,java.base,jdk.zipfs,jdk.unsupported,java.logging"),
+                '--output', new File(buildDir, '/jre-image'),
+                '--strip-debug',
+                '--compress', '2',
+                '--no-header-files',
+                '--no-man-pages'
+    }
 }
 
-task jlinkWithModules(type: Exec) {
-    dependsOn clean
-    dependsOn 'jar'
-    dependsOn 'tqdatabase:jar'
-    dependsOn 'copyToLib'
-    dependsOn 'copyJarsToModuleDeps'
-    dependsOn 'patchModulesJar'
+task appimage(type: Exec) {
+    dependsOn 'jlink'
     workingDir buildDir
+//    def tqdatabaseDeps = project(':tqdatabase').configurations.compile.collect { it.getPath() }
+//            .join(File.pathSeparatorChar.toString())
+//    def tqdatabaseJar = project(':tqdatabase').tasks.jar.outputs.files.collect { it.getPath() }
+//            .join(File.pathSeparatorChar.toString())
 
-    def tqdatabaseDeps = project(':tqdatabase').configurations.compile.collect { it.getPath() }
-            .join(File.pathSeparatorChar.toString())
-    def tqdatabaseJar = project(':tqdatabase').tasks.jar.outputs.files.collect { it.getPath() }
-            .join(File.pathSeparatorChar.toString())
-    //"c:/windows/system32/cmd.exe","/c","echo",
-    commandLine "${javahome}/bin/jlink.exe",
-            '--module-path', (tqdatabaseJar+ File.pathSeparatorChar.toString()+patchjarDir
-            + "${File.pathSeparatorChar}libs" + "${File.pathSeparatorChar}${javahome}/jmods"),
-            '--add-modules', "br.com.pinter.tqdatabase," +
-            "org.apache.commons.lang3,jna,platform," +
-            "javafx.base,javafx.fxml,javafx.graphics,javafx.controls,java.prefs,java.base," +
-            "jdk.zipfs,jdk.unsupported",
-            '--output', new File(buildDir, '/dist'),
-            '--strip-debug',
-            '--compress', '2',
-            '--no-header-files',
-            '--no-man-pages'
+//    def modulePath = (configurations.compile.findAll{ !it.getName().matches("javafx.*.jar") }).collect { it.getPath() }.join(';')
+//    def modulePath = 'build/jardist;libs'
+//    System.err.println(modulePath)
+//    "c:/windows/system32/cmd.exe","/c","echo",
+    if (moduleInfoPresent) {
+        commandLine "${javahome}/bin/java.exe",
+                "-Xmx1024M",
+                '--module-path', "${javahome}/jmods",
+                '--add-opens', 'jdk.jlink/jdk.tools.jlink.internal.packager=jdk.packager',
+                '--module', "jdk.packager/jdk.packager.Main",
+                'create-image',
+                '--verbose',
+                '--echo-mode',
+                '--singleton',
+                '--runtime-image', new File(buildDir, "jre-image"),
+                '--module', 'br.com.pinter.tqrespec',
+                '--output', new File(buildDir, '/app-image'),
+                '--name', 'TQRespec',
+                '--icon', "${projectDir}/src/main/resources/icon/icon64.ico",
+                '--version', project.version,
+                '--vendor', 'Emerson Pinter',
+                '--input', new File(buildDir, '/appimage-files'),
+                '--description', 'The respec tool for Titan Quest game',
+                '--class', "br.com.pinter.tqrespec.core.FxApplication",
+                '--jvm-args', '--add-opens javafx.base/com.sun.javafx.reflect=ALL-UNNAMED'
+    } else {
+        System.err.println(jar.outputs.files.collect { it.getPath() }.join(' '))
+        commandLine "${javahome}/bin/java.exe",
+                "-Xmx1024M",
+                '--module-path', "${javahome}/jmods",
+                '--add-opens', 'jdk.jlink/jdk.tools.jlink.internal.packager=jdk.packager',
+                '--module', "jdk.packager/jdk.packager.Main",
+                'create-image',
+                '--verbose',
+                '--echo-mode',
+                '--singleton',
+                '--module-path', "$buildDir/appimage-files",
+                '--runtime-image', new File(buildDir, "jre-image"),
+                '--input', new File(buildDir, '/appimage-files'),
+                '--main-jar', jar.outputs.files.collect { it.getName() }.get(0),
+                '--output', new File(buildDir, '/app-image'),
+                '--name', 'TQRespec',
+                '--icon', "${projectDir}/src/main/resources/icon/icon64.ico",
+                '--version', project.version,
+                '--vendor', 'Emerson Pinter',
+                '--description', 'The respec tool for Titan Quest game',
+                '--class', "br.com.pinter.tqrespec.core.FxApplication",
+                '--jvm-args', '--add-opens javafx.base/com.sun.javafx.reflect=ALL-UNNAMED'
+    }
+    doLast {
+        copy {
+            from new File(projectDir, "sdk/javafx-sdk-11/bin").listFiles()
+            into "$buildDir/app-image/tqrespec"
+        }
+        new File(buildDir, "jre-image").deleteDir()
+    }
 }
